--- a/public/index.html
+++ b/public/index.html
@@ -57,5 +57,18 @@
   </div>
 
   <script src="/app.js" charset="utf-8"></script>
+  <script>
+    var ned = "FLANDERS!!!";
+
+    (function() {
+      var homer = 'hello';
+
+      window.setTimeout(() => {
+        debugger;
+        console.log('homer says', homer);
+        console.log('ned says', ned);
+      }, 5000);
+    })()
+  </script>
 </body>
 </html>
