html and css for nasa

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,24 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
+  <div class="section">
+    <div class="container">
+      <div class="nasa-pod">
+        <div class="nasa-pod__pic">
+          <img src="http://placecage.com/200/200" alt="">
+        </div>
+
+        <h2 class="nasa-pod__main-caption">
+          <span class="nasa-pod__title">Title Goes Here</span>
+          -
+          <span class="nasa-pod__date">0000-00-00</span>
+        </h2>
+
+        <p class="nasa-pod__explanation">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis accusamus, alias. Natus distinctio possimus suscipit omnis quod molestias eveniet ut consequatur, tenetur non minima repellendus asperiores, quia iusto! Rerum, cupiditate.</p>
+      </div>
+    </div>
+  </div>
+
   <div class="section section--calc">
     <div class="container">
       <div class="calculator">
